# nimamp

./: .clang-format  .gitignore  CMakeLists.txt  Main.qml  MainWindow.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  resources.qrc
headers/: SongItem.ui  key_events.hpp  mainwindow.hpp  metadata_widget.hpp  player.hpp  playlist.hpp  playlist_item.hpp  playlist_tabs_widget.hpp  playlist_view_widget.hpp  queue.hpp  queue_model.hpp  queue_song_item.hpp  song.hpp  song_item.hpp  song_model.hpp  transport_widget.hpp  utils.hpp
include/: equalizer_widget.hpp  lyrics_widget.hpp  mainwindow.hpp  player.hpp  playlist.hpp  playlist_item.hpp  playlist_tabs_widget.hpp  playlist_view_widget.hpp  queue_widget.hpp  transport_widget.hpp  utils.hpp
qml/: Main.qml
qss/: style.qss
sources/: MainWindow.ui  QueueSongItem.ui  QueueWidget.ui  SongItem.cpp  SongItem.ui  equalizer_widget.cpp  main.cpp  mainwindow.cpp  metadata_widget.cpp  player.cpp  playlist.cpp  playlist_item.cpp  playlist_tabs_widget.cpp  playlist_view_widget.cpp  queue.cpp  queue_model.cpp  queue_song_item.cpp  queue_widget.cpp  song.cpp  song_item.cpp  transport_widget.cpp
src/: equalizer_widget.cpp  lyrics_widget.cpp  main.cpp  mainwindow.cpp  metadata_widget.cpp  player.cpp  playlist.cpp  playlist_item.cpp  playlist_tabs_widget.cpp  playlist_view_widget.cpp  queue_widget.cpp  song.cpp  song_item.cpp  transport_widget.cpp
ui/: EqualizerWidget.ui  LyricsWidget.ui  MainWindow.ui  MetadataWidget.ui  PlaylistItem.ui  PlaylistTabsWidget.ui  PlaylistViewWidget.ui  QueueSongItem.ui  QueueWidget.ui  SongItem.ui  TransportWidget.ui
